applications/n8n/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: default
  labels:
    app: n8n
    component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
      component: app
  template:
    metadata:
      labels:
        app: n8n
        component: app
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:2.6.3
          ports:
            - containerPort: 5678
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5678
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 5
            timeoutSeconds: 10

          volumeMounts:
            - name: data
              mountPath: /home/node/.n8n
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n-data
